--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "http://www.rootbeercomics.com/projects/hdc-front-door/"
 }
